cloudformation/cf-tutorial.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Test cfn Template

################################
# Parameters
################################
Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    Description: Select EC2 instance type.
  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select Keypair name.
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

Resources:
################################
# VPC
################################
  cfnVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: cfn-vpc
################################
# Subnet
################################
  cfnSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref cfnVPC
      CidrBlock: 10.0.11.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: 'ap-northeast-1a'
      Tags:
        - Key: Name
          Value: cfn-vpc-public-1a
################################
# Gateway
################################
  cfnInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: cfn-vpc-igw
  cfnAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref cfnVPC
      InternetGatewayId: !Ref cfnInternetGateway
################################
# PublicTable
################################
  cfnRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref cfnVPC
      Tags:
      - Key: Name
        Value: cfn-vpc-public-rt
  cfnRoute:
    Type: AWS::EC2::Route
    DependsOn: cfnInternetGateway
    Properties:
      RouteTableId: !Ref cfnRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref cfnInternetGateway
  cfnSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref cfnSubnet
      RouteTableId:  !Ref cfnRouteTable
################################
# EC2
################################
  cfnEC2Instance: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      SubnetId: !Ref cfnSubnet
      BlockDeviceMappings: 
          - DeviceName: "/dev/xvda"
            Ebs: 
              VolumeType: gp2
              VolumeSize: 20
      Tags:
        - Key: Name
          Value: cfn-web-1
      SecurityGroupIds:
        - !Ref cfnSecurityGroup
      KeyName: !Ref KeyPair
################################
# Security Group EC2
################################
  cfnSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: cfnSecurityGroup
      VpcId: !Ref cfnVPC
      Tags:
        - Key: Name
          Value: cfn-web-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
